# yt-dlp-web

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs
static/: index.css  index.html
