[package]
name = "yt-dlp-web"
version = "0.1.1"
edition = "2024"

[dependencies]
axum = "0.8.8"
futures-core = "0.3.31"
serde = { version = "1.0.228", features = ["serde_derive"] }
tempfile = "3.24.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
urlencoding = "2.1.3"
uuid = { version = "1.20.0", features = ["v4"] }
